@@ -14,7 +14,7 @@ AUX mr_568_extensions_python3_compatibility.patch 204390 BLAKE2B e6efceed1406ffb
 AUX mr_582_extensions_python3_compatibility.patch 5085 BLAKE2B 66cc206aa050b65a3b45014b78bfe2faa0c1c07228dd39ab9f77c8efd64b2b8b6d184462c94632c8cf190950b9cbca9abd3199061fe709909612bf9ef55543a8 SHA512 c36625b2ba31df26f88a9c0ed244454c192b8be7b8a83f73090004ff5f1199a8a3eda763e0858c554ac9efa1a41f2aaa01d917946396b635f8f2967b0e51ae3b
 DIST inkscape-0.92.4.tar.bz2 31929728 BLAKE2B 892bf4ed913019b27a9b8897e3ae32c44152163ded0eb345d59915ffdc9818d29f210de3294ef1b05601141185b5e3b10779778551b860f31e7df5c659492c77 SHA512 b9034605a79cd8aea808edf42e284819951ae1ea67778f0922f4c10224e94aca6c844acbc2294625773f0a7047d4e32ccdada876238a792a2c17db172c88e120
 EBUILD inkscape-0.92.4-r1.ebuild 3837 BLAKE2B 824d93b7e5e4ac512d2e0e212e9edff705e02658fbe1add086cfc4b5443067ec583b5e18c4bb0e4f01297719b2284571206353f08033f9831bee5482d3d9402c SHA512 4b138b844219035f65bf791bd5dd2cc08d5f48c7ea6ed1ec49817523c16c9935306a8ae7d58eb112066acde5b133832f9cf63a95a036cd0b85b0068dd48ad877
-EBUILD inkscape-0.92.4-r2.ebuild 4084 BLAKE2B 2cddf5d7910ef71064d621f017deb80533246c2eff91bdf8d7a10329748374f18967ab702057765612c5dff0b29b7709efadc9ff945e586af92d29aec9d38d2d SHA512 0eb29e81bc0c0c1be663d56ac82cc3b5c11dceaa96d09fdb56aa3c2bb8d00abd1b97c94cdea4e62e947cb708ca411670c27d73ae291efd1c54a277f62a209241
+EBUILD inkscape-0.92.4-r2.ebuild 4030 BLAKE2B 8ef89aa161c062de37db4ec61f01252ecd3b3a44c2dbd9634ac9cc784fb46bbc8b84f9b3e6cb4c83467dfe08028df6deb5c74bf53750214ffac5e0d11132d674 SHA512 f125a0b08e08dc1b1816eaca4b7fac3b39ec7b0fe552b0f6412051ed5e5bf822130d0df68111849310e942a41b99b9854977f2883e655ff3b35d895cc379380c
 EBUILD inkscape-0.92.4.ebuild 3809 BLAKE2B a126b4d8ea0fb1a78da4563821e0c417207378d4cce84acdc13acf907f563b75e25f34f9c2e26c4fa2411fdc7763bcf41282930a16e6bb8d6c0ff3ded2e56df8 SHA512 7787c362caa9f6d9b8fd87695ccdc0d3363db6a0ec0b62bdf68c8179e66dc954ee9a7439fcc0ad1e107298efa3fccbaebb32ace2e5e65722ac4d48f89ceec66b
-MISC ChangeLog 523 BLAKE2B a42ceef5cdc131efa9f5911f19403bcf27daddcb1b82c3bc1fa9a1e9cb3ecc8997b9c19028a79ad474f46460612f76d4dc78cf7ac207c21c1f9bb9ec26fb1eb5 SHA512 774e3bc00af2fbb152fc4f0ebee771a9a91101ee25971dd5cf9a869bb59597bd3d3f91963185b7d8c19fa640870a013f7757a4a604f145ea517003c6ffecdb70
+MISC ChangeLog 556 BLAKE2B 2bb65a5e33ecdbdabaca577d482069bc9486b5003715f5d345e3f0239a8a4f38664787c763d65c4a281f283f5f8d6da570eeba79c8c743e4b2f515b4e87e4514 SHA512 b1a2d848e17f3fe469b10c1fec9e556a610fcf632854226502199507ccdefda766801f4038b97a23bd1344b92c74ebd0b7f3e7181cd80cd6c48178ec75cfcfc2
 MISC metadata.xml 812 BLAKE2B 9b06a44ec7ded4b7b4618813bb4b2b5deed3bbc45fd43cffcf435594f3141943a45e592bf2947b00895f0f40d40b0fbe51109daa63f73f3276f50afec620d9fa SHA512 dbe4bb2e918a4c8a20c9a273cef29976d8cfe74e6c2ae1ba8cb77f592c885e8353b7bc3ca8f529e00629f6a0ac7627877cdef68fe07472fc1f417abba5d0268b
